# RTTM

./: .gitignore  CMakeLists.txt  README.md  REDAME_EN.md
.kiro/specs/rttm-refactor/: design.md  requirements.md  tasks.md
benchmark/: BENCHMARK_RESULTS.md  BoostHahaTest.cpp  RTTMTest.cpp  RTTRTest.cpp  benchmark_common.hpp  compare_results.py  ecs_benchmark.cpp  reflcpp_benchmark.cpp  reflection_test.cpp  reflection_test.h  rttm_benchmark.cpp  rttr_benchmark.cpp
cmake/: generate_reflection.py  reflection.cmake
examples/: basic_usage.cpp
include/RTTM/: Entity.hpp  Factory.hpp  Function.hpp  Object.hpp  RTTM.hpp  Serializable.hpp
include/RTTM/detail/: BoundType.hpp  Container.hpp  ContainerImpl.hpp  Exceptions.hpp  Factory.hpp  Instance.hpp  Method.hpp  Property.hpp  PropertyHandle.hpp  RType.hpp  RTypeHandle.hpp  Registry.hpp  TypeInfo.hpp  TypeManager.hpp  TypeTraits.hpp  Variant.hpp
src/RTTM/: Function.cpp  Instance.cpp  Object.cpp  RTTM.cpp  Serializable.cpp
